# culora

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  security.yml
culora/: __init__.py
culora/analysis/: __init__.py
culora/cli/: __init__.py  app.py  main.py  utils.py
culora/cli/commands/: clip.py  composition.py  config.py  device.py  duplicate.py  faces.py  images.py  pose.py  quality.py  selection.py
culora/cli/display/: __init__.py  console.py  tables.py  theme.py
culora/cli/validation/: __init__.py  validators.py
culora/core/: __init__.py  config.py  config_manager.py  device_detector.py  device_info.py  device_manager.py  exceptions.py  logging.py  types.py
culora/core/exceptions/: __init__.py  config.py  culora.py  device.py  image.py  selection.py  service.py
culora/domain/: __init__.py
culora/domain/enums/: __init__.py  clip.py  composition.py  device_types.py  log_levels.py  pose.py
culora/domain/models/: __init__.py  clip.py  composition.py  device.py  duplicate.py  face.py  face_reference.py  image.py  memory.py  pose.py  quality.py  selection.py
culora/domain/models/config/: __init__.py  clip.py  composition.py  culora.py  device.py  duplicate.py  face.py  image.py  logging.py  pose.py  quality.py  selection.py
culora/export/: __init__.py
culora/selection/: __init__.py
culora/services/: __init__.py  clip_service.py  composition_service.py  config_service.py  device_service.py  duplicate.py  duplicate_service.py  face_analysis_service.py  face_reference_service.py  image_service.py  memory_service.py  pose_service.py  quality_service.py  selection_service.py
culora/utils/: __init__.py  app_dir.py  logging.py  similarity.py
docs/: analysis-libraries.md
prompts/: 01-basic-features.md  01-prototype.md  02-advanced-features.md
src/culora/: __init__.py  config.py  main.py
src/culora/analysis/: analyzer.py  config.py
src/culora/cli/: __init__.py  analyze.py  main.py  select.py
src/culora/commands/: __init__.py  analyze.py  config.py
src/culora/managers/: config_manager.py  image_manager.py  model_manager.py
src/culora/models/: __init__.py  analysis.py  analysis_result.py  directory_analysis.py  duplicate_detection_result.py  face_detection_result.py  image_analysis.py  image_quality_result.py
src/culora/orchestrators/: __init__.py  image_analyzer.py  image_curator.py
src/culora/services/: __init__.py  duplicate_detection_service.py  face_detection_service.py  image_quality_service.py  selection_service.py
src/culora/utils/: __init__.py  app_data.py  cache.py  console.py  images.py  selection.py
tests/: __init__.py  conftest.py
tests/analysis/: __init__.py  test_analyzer.py  test_integration.py  test_model_manager.py  test_services.py
tests/cli/: __init__.py  test_analyze.py  test_main.py  test_select.py
tests/core/: __init__.py  test_config.py  test_config_manager.py  test_device_detector.py  test_device_info.py  test_device_manager.py  test_exceptions.py  test_logging.py
tests/core/fixtures/: __init__.py  config_fixtures.py  logging_fixtures.py
tests/fixtures/: __init__.py
tests/fixtures/configs/: sample_config.json
tests/helpers/: __init__.py  assertions.py  factories.py  file_utils.py  image_fixtures.py
tests/integration/: __init__.py  test_analyze_integration.py  test_basic_cli.py  test_cli_integration.py  test_config_integration.py  test_integration.py
tests/mocks/: clip_mocks.py  insightface_mock.py  mock_torch.py  piq_mocks.py  pose_mocks.py  vision_language_mocks.py
tests/unit/: __init__.py  test_analysis_result.py  test_analyze_commands.py  test_app_data.py  test_config_commands.py  test_config_manager.py  test_config_models.py  test_image_analyzer.py  test_model_manager.py  test_selection_logic.py  test_selection_service.py
tests/unit/cli/: test_app.py
tests/unit/cli/commands/: test_config.py  test_device.py  test_quality.py
tests/unit/cli/display/: __init__.py  test_console.py  test_tables.py  test_theme.py
tests/unit/cli/validation/: __init__.py  test_validators.py
tests/unit/domain/models/: test_device.py  test_face_reference.py  test_image.py  test_memory.py  test_selection.py
tests/unit/domain/models/config/: __init__.py  test_culora.py  test_device.py  test_image.py  test_logging.py  test_quality.py  test_selection_config.py
tests/unit/services/: test_clip_service.py  test_composition_service.py  test_config_service.py  test_device_service.py  test_duplicate.py  test_duplicate_service.py  test_face_analysis_service.py  test_face_reference_service.py  test_image_service.py  test_memory_service.py  test_pose_service.py  test_quality_service.py  test_selection_service.py
tests/unit/utils/: test_logging.py  test_similarity.py
tests/utils/: __init__.py  test_app_data.py  test_console.py  test_images.py
